# bankruptcy-parser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  repository.py  settings.py
app/agents/: arbitr_agent.py  base_user_agent.py  fed_resurs_agent.py
app/migrations/: env.py
app/migrations/versions/: 0fc633c0f2d2_init.py  4c36f7efbf14_init.py  58c3418d006c_added_ix.py
app/models/: models.py
src/: README.md
