[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "seleniumbase>=4.47.4",
    "sqlalchemy>=2.0.48",
]
